#+TITLE: AUCTeX NEWS -- History of notable and user-visible changes
#+AUTHOR: AUCTeX Maintenance Team
#+LANGUAGE: en
#+OPTIONS: num:nil toc:nil
#+LINK: ELPA https://elpa.gnu.org/packages/%s
# Copyright (C) 2024 Free Software Foundation, Inc.
# License: GNU General Public License 3
# The format is based on [[https://keepachangelog.com/en/1.1.0/][Keep a Changelog]]

* [Unreleased]

** Added

- Add new support file =style/minted2.el= (=style/minted.el= is updated
  to package version v3.1.2).

* [14.0.7] - 2024-10-05

** Added

- Respect the value of ~TeX-output-dir~ when processing files with
  latexmk.  This means that the default value of ~TeX-command-list~ is
  changed.

- Add new support files =style/authblk.el=, =style/langscibook.cls=,
  =style/lstautogobble.el=, =style/lstlinebgrd.el=,
  =style/ninecolors.el=, =style/supertabular.el=, =style/tabularray.el=
  and =style/xtab.el=.

** Changed

- AUCTeX 13.3 marks the last standalone tarball release.  From now on,
  AUCTeX releases are made available through the
  [[ELPA:auctex.html][Emacs Lisp Package Archive (ELPA)]].  Distro
  packagers are encouraged to use the [[ELPA:auctex.html][ELPA]]
  packages as-is and install them under one of the new Emacs locations
  for system-wide packages, see ~package-directory-list~.

  At the same time, development is now done on the =main= branch and the
  =master= branch has been deleted.  Its last state has been pushed as
  =auctex-13= branch for archiving purposes but it won't get any updates
  anymore.

  For users who tracked the master branch: Do =git switch main= to
  switch to the main branch where development takes place nowadays.

- Move additions to the variable ~LaTeX-indent-environment-list~ for
  various tabular environments to =latex.el= from the respective style
  files.

** Fixed

- Fold argument of verbatim macros more accurately.

** Removed

- Remove the possibility to disable the side-wide installation with:
  #+begin_src emacs-lisp