@@ -2874,6 +2874,11 @@ This is a list of commands, consulted under the default behavior of
 under standard key binding.
 @end defopt
 
+@defopt TeX-fold-alert-color
+This is the color used to fold @samp{\alert@{...@}} macros (for the
+replacement specifier given by the default value of
+@code{TeX-fold-macro-spec-list}).
+@end defopt
 
 @node Outline
 @section Outlining the Document
